--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,8 @@
 .page-main__product-img {
   max-width: 100%;
   height: auto;
+  height: 751px;
+  width: 532px;
 }
 
 .page-main__product-slider-pagination {
@@ -185,6 +187,10 @@
 
 }
 
+.page-main__new-wrap-img {
+  
+}
+
 .page-main__new-img {
   max-width: 100%;
   height: auto;
@@ -223,8 +229,13 @@
 
 }
 
-.page-main__review-image {
+.page-main__review-wrap-image {
 
+}
+
+.page-main__review-image {
+  max-width: 100%;
+  height: auto;
 }
 
 .page-main__review-author {
@@ -362,6 +373,10 @@
 }
 
 .page-main__sale-product-button {
+
+}
+
+.page-main__sale-wrap-img {
 
 }
 
