--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,17 @@
 .page-body {
-
+  display: flex;
+  flex-direction: column;
 }
 
 .page-header {
-
+  display: flex;
+  padding-top: 90px;
+  overflow: hidden;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
+  max-width: 1220px;
+  min-width: 320px;
 }
 
 .page-header__logo {
@@ -11,7 +19,8 @@
 }
 
 .page-header__site-nav {
-
+  margin-left: 140px;
+  flex-grow: 1;
 }
 
 .page-header__site-nav_closed {
@@ -19,12 +28,16 @@
 }
 
 .page-header__site-nav-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 380px;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
 .page-header__site-nav-item {
+  width: 33.3%;
   font-family: Open Sans;
   font-size: 14px;
   line-height: 19px;
@@ -42,17 +55,19 @@
 }
 
 .page-header__user-nav {
-
 }
 
 .page-header__user-nav-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
 .page-header__user-nav-item {
-
+  font-size: 0px;
 }
 
 .page-header__user-nav-a {
@@ -64,23 +79,45 @@
 }
 
 .page-main {
-
+  flex: 1;
 }
 
 .page-main__page-name {
   /*visually hidden*/
+  font-size: 0px;
 }
 
 .page-main__products {
-
+  max-width: 1220px;
+  min-width: 320px;
+  display: flex;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin: 0 auto;
 }
 
 .page-main__product-slider {
-
+  display: flex;
+  max-width: 1100px;
+  min-width: 320px;
+  max-height: 751px;
+  min-height: 628px;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
 }
 
 .page-main__product-slide {
+  display: flex;
+  max-width: inherit;
+  min-width: inherit;
+  flex-shrink: 0;
+  height: 100%;
+  scroll-snap-align: start;
+}
 
+.page-main__product-info {
 }
 
 .page-main__product-type {
@@ -127,24 +164,29 @@
 }
 
 .page-main__product-img {
+  display: block;
   max-width: 100%;
   height: auto;
-  height: 751px;
-  width: 532px;
 }
 
 .page-main__product-slider-pagination {
+  display: block;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
 .page-main__product-slide-number {
-
 }
 
 .page-main__product-slide-a {
+  /*font-family: Playfair Display;*/
   text-decoration: none;
+  font-size: 20px;
+  line-height: 29px;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .page-main__new {
