--- a/css/style.css
+++ b/css/style.css
@@ -127,11 +127,11 @@
   line-height: 19px;
   letter-spacing: 0.13em;
   text-transform: uppercase;
-  color: #303032;
 }
 
 .page-header__site-nav-a {
   text-decoration: none;
+  color: #303032;
 }
 
 .page-header__site-nav-button {
@@ -268,7 +268,9 @@
 }
 
 .page-main__product-slider-pagination {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -285,6 +287,12 @@
   letter-spacing: 0.05em;
   text-transform: uppercase;
   color: rgba(0, 0, 0, 0.3);
+}
+
+.page-main__product-a-active{
+  font-size: 40px;
+  line-height: 58px;
+  color: #000000;
 }
 
 .page-main__new {
@@ -373,6 +381,7 @@
 .page-main__new-product-name {
   font-family: "Open Sans", "Arial", sans-serif;
   font-size: 20px;
+  font-weight: normal;
   line-height: 27px;
   /* identical to box height */
   color: #303032;
@@ -448,6 +457,7 @@
   flex-direction: column;
   font-family: "Open Sans", "Arial", sans-serif;
   font-weight: bold;
+  font-style: normal;
   font-size: 18px;
   line-height: 27,78px;
   text-align: center;
@@ -455,7 +465,7 @@
 }
 
 .page-main__review-author-status {
-  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: normal;
   font-size: 16px;
   line-height: 24,7px;
 }
@@ -510,15 +520,25 @@
 }
 
 .page-main__sale-tab {
-
-}
-
-.page-main__sale-tab_active {
-   text-decoration: underline;
+  
 }
 
 .page-main__sale-tab-a {
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 25px;
+  /* identical to box height */
+  text-align: center;
   text-decoration: none;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.page-main__sale-tab_active {
+  text-decoration: underline;
+  text-decoration-color: rgba(0, 0, 0, 0.4);
+  color: #000000;
 }
 
 .page-main__sale-tabs-contents {
@@ -556,6 +576,7 @@
 
 .page-main__sale-product-name {
   font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: normal;
   font-size: 16px;
   line-height: 22px;
   color: #000000;
@@ -583,7 +604,13 @@
 }
 
 .page-main__sale-product-button {
-
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-size: 16px;
+  letter-spacing: 0.13em;
+  line-height: 22px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background: #303032;
 }
 
 .page-main__sale-wrap-img {
@@ -624,26 +651,24 @@
 }
 
 .page-footer__nav-item {
-  font-family: "Roboto", "Arial", sans-serif;
-  font-size: 16px;
-  line-height: 19px;
-  color: #303032;
 }
 
 .page-footer__nav-item-a {
+  font-family: "Open Sans", "Arial", sans-serif;
   text-decoration: none;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 22px;
+  text-align: center;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+  color: #303032;
 }
 
 .page-footer__address {
   display: flex;
-  font-family: "Roboto", "Arial", sans-serif;
   width: 100%;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 19px;
-
-  color: #303032;
 }
 
 .page-footer__tel {
@@ -651,7 +676,13 @@
 }
 
 .page-footer__tel-a {
+  font-family: "Roboto", "Arial", sans-serif;
   text-decoration: none;
+  color: #303032;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
 }
 
 .page-footer__mail {
@@ -659,7 +690,13 @@
 }
 
 .page-footer__mail-a {
+  font-family: "Roboto", "Arial", sans-serif;
   text-decoration: none;
+  color: #303032;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
 }
 
 .page-footer__copyright {
