--- a/css/style.css
+++ b/css/style.css
@@ -87,42 +87,40 @@
 
 
 .page-body {
-  display: flex;
-  flex-direction: column;
   background-color: #F9FDFF;
-  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  
+}
 
+.page-header {
+  overflow: hidden;
+}
+
+.page-header__wrapper {
+  display: flex;
+  padding-top: 90px;
   padding-left: 20px;
   padding-right: 20px;
   margin: 0 auto;
   max-width: 1220px;
   width: 100%;
   min-width: 320px;
-  
+  position: relative;
 }
 
-.page-body::before {
+.page-header__wrapper::before {
   content: "";
+  display: block;
   position: absolute;
   height: 100%;
-  width: 200%;
+  width: 55%;
+  box-sizing: border-box;
   top: 0;
   left: 65.5%;
   background-color: #fceae8;
   z-index: -1;
-}
-
-
-.page-header {
-  display: inline-flex;
-  padding-top: 90px;
-  overflow: hidden;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 0 auto;
-  max-width: 1220px;
-  width: 100%;
-  min-width: 320px;
 }
 
 .page-header__logo {
@@ -156,6 +154,10 @@
   text-transform: uppercase;
 }
 
+.page-header__site-nav-item:nth-child(3n) {
+  text-align: right;
+}
+
 .page-header__site-nav-a {
   text-decoration: none;
   color: #303032;
@@ -181,6 +183,7 @@
 
 .page-header__user-nav-item {
   font-size: 0px;
+  margin-left: 22px;
 }
 
 .page-header__user-nav-a {
@@ -201,11 +204,9 @@
   height: 28px;
   background-image: url("../img/icon-cart.svg");
   background-repeat: no-repeat;
-  margin-left: 22px;
 }
 
 .page-main {
-  flex: 1;
   overflow: hidden;
 
 }
@@ -218,17 +219,30 @@
 .page-main__products {
   max-width: 1220px;
   min-width: 320px;
+  width: 100%;
   display: flex;
   padding-right: 20px;
   padding-left: 20px;
   margin: 0 auto;
+  position: relative;
+}
+
+.page-main__products::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 65.5%;
+  background-color: #fceae8;
+  z-index: -1;
 }
 
 .page-main__product-slider {
   display: flex;
   width: 100%;
   height: 100%;
-  flex: 1;
+  flex-shrink: 1;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
   scroll-snap-type: x mandatory;
@@ -314,6 +328,7 @@
 
 .page-main__product-slider-pagination {
   display: flex;
+  flex-shrink: 1;
   flex-direction: column;
   align-items: flex-end;
   margin: 0;
