--- a/css/style.css
+++ b/css/style.css
@@ -376,13 +376,14 @@
   margin: 0;
   padding: 0;
   justify-content: flex-start;
+  align-items: flex-end;
 }
 
 .page-main__product-slide-a {
+  width: 41px;
   text-align: right;
-  height: 54px;
-  width: 61px;
-  padding-right: 20px;
+  margin-top: 20px;
+  
 
   font-family: "Playfair Display", "Georgia", serif;
   text-decoration: none;
@@ -395,9 +396,9 @@
 }
 
 .page-main__product-a-active{
- 
+  padding-right: 20px;
   font-size: 40px;
-  line-height: 58px;
+  line-height: 54px;
   color: #000000;
   border-right: 2px solid #000000;
 }
