--- a/css/style.css
+++ b/css/style.css
@@ -950,16 +950,19 @@
 }
 
 .page-footer__logo {
-
+  margin-bottom: 31px;
+  margin-left: 1px;
 }
 
 .page-footer__nav {
-
+  margin-right: 61px;
 }
 
 .page-footer__nav-list {
+  width: 505px;
   display: flex;
   flex-grow: 1;
+  justify-content: space-between;
   margin: 0;
   padding: 0;
   list-style: none;;
@@ -981,16 +984,23 @@
   color: #303032;
 }
 
+.page-footer__nav-item-a:hover,
+.page-footer__nav-item-a:focus {
+  opacity: 80%;
+}
+
+.page-footer__nav-item-a:active {
+  opacity: 60%;
+}
+
 .page-footer__address {
   display: flex;
   width: 100%;
 }
 
-.page-footer__tel {
-
-}
-
 .page-footer__tel-a {
+  display: inline-flex;
+  height: 20px;
   font-family: "Roboto", "Arial", sans-serif;
   text-decoration: none;
   color: #303032;
@@ -1000,11 +1010,27 @@
   line-height: 19px;
 }
 
-.page-footer__mail {
+.page-footer__tel-a:hover,
+.page-footer__tel-a:focus {
+  opacity: 80%;
+}
 
+.page-footer__tel-a:active {
+  opacity: 60%;
+}
+
+.page-footer__tel-a::before {
+  content: "";
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  background-image: url("../img/icon-phone.svg");
+  margin-right: 9px;
 }
 
 .page-footer__mail-a {
+  display: inline-flex;
+  height: 20px;
   font-family: "Roboto", "Arial", sans-serif;
   text-decoration: none;
   color: #303032;
@@ -1012,6 +1038,36 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 19px;
+}
+
+.page-footer__mail-a:hover,
+.page-footer__mail-a:focus {
+  opacity: 80%;
+}
+
+.page-footer__mail-a:active {
+  opacity: 60%;
+}
+
+.page-footer__mail-a::before {
+  content: "";
+  display: inline-block;
+  width: 18px;
+  height: 16px;
+  background-image: url("../img/icon-mail.svg");
+  background-repeat: no-repeat;
+  margin-left: 53.5px;
+  margin-right: 4px;
+  margin-top: 2px;
+}
+
+.page-footer__copyright-wrapper {
+  display: flex;
+  width: 100%;
+  height: 23px;
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  justify-content: flex-end;
+  margin-top: 30px;
 }
 
 .page-footer__copyright {
@@ -1021,5 +1077,6 @@
   text-align: center;
   color: #000000;
   opacity: 0.2;
+  padding-top: 10px;
 }
 
